[package]
name = "avirus"
version = "0.2.4"
authors = ["emi"]

description = "A crate for reading AVI files with no_std support."
repository = "https://github.com/emiongit/avirus/"
readme = "README.md"
keywords = ["multimedia", "video"]
license-file = "LICENSE"
[dependencies]

byteorder = {version = "1",default-features = false}
